<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.TestActivity"
    tools:ignore="UsingOnClickInXml">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary_variant"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_btn_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toolbarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/layoutDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/select_true_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/tvCurrentTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:background="@drawable/bg_white_stroked"
        android:drawablePadding="5dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/layoutDesc"
        android:fontFamily="@font/ubuntu_regular"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        android:paddingVertical="4dp"
        android:text="@string/all_test_count"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/select_true_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDesc" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="30dp"
                android:paddingVertical="20dp"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/radioBtn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:button="@drawable/radio_button_inset"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="onRadioButtonClicked"
                    android:paddingVertical="15dp"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioBtn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:button="@drawable/radio_button_inset"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="onRadioButtonClicked"
                    android:paddingVertical="15dp"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioBtn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:button="@drawable/radio_button_inset"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="onRadioButtonClicked"
                    android:paddingVertical="15dp"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioBtn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:button="@drawable/radio_button_inset"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="onRadioButtonClicked"
                    android:paddingVertical="15dp"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/bg_recording"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/layoutTrueAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_next_layout"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/answer_true"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:drawableStartCompat="@drawable/ic_like" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="@drawable/bg_btn_next"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:onClick="onNextButtonClicked"
                android:paddingVertical="10dp"
                android:text="@string/next"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFalseAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_next_red_layout"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/answer_false"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:drawableStartCompat="@drawable/ic_dislike" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="@drawable/bg_btn_next"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:onClick="onNextButtonClicked"
                android:paddingVertical="10dp"
                android:text="@string/next"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>